--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9da87b">  <td>22/04/27 16:57:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.tests.LoginPageTest@52b1beb6]">loginTest</td> 
-  <td>main@1640296160</td>   <td></td> </tr>
-<tr bgcolor="9da87b">  <td>22/04/27 16:56:59</td>   <td>-6637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.tests.LoginPageTest@52b1beb6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1640296160</td>   <td></td> </tr>
-<tr bgcolor="9da87b">  <td>22/04/27 16:57:10</td>   <td>4784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.tests.LoginPageTest@52b1beb6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1640296160</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoImageTest()[pri:2, instance:com.crm.qa.tests.LoginPageTest@543588e6]">crmLogoImageTest</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:16</td>   <td>-7239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.tests.LoginPageTest@543588e6]">loginPageTitleTest</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:30</td>   <td>7201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.tests.LoginPageTest@543588e6]">loginTest</td> 
+  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:24</td>   <td>860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.tests.LoginPageTest@543588e6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:24</td>   <td>860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.tests.LoginPageTest@543588e6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:24</td>   <td>860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.tests.LoginPageTest@543588e6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:39</td>   <td>16159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.tests.LoginPageTest@543588e6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:39</td>   <td>16159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.tests.LoginPageTest@543588e6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>22/05/15 11:36:39</td>   <td>16159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.tests.LoginPageTest@543588e6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1898325501</td>   <td></td> </tr>
 </table>
